Warning on entering text edit mode #60388

Closed
opened 2019-01-10 12:22:54 +01:00 by Henry Schreiner · 3 comments

System Information
Operating system: macOS
Graphics card: Intel

Blender Version
Broken: 2.80 0f99845d2f 2018-1-10

Short description of error
A warning pops up on the bottom bar saying Tool 'Select Box' not found for space 'VIEW3D' when entering text edit mode. There are no tools at all on the left when entering edit mode, not sure if that's expected or not.

Exact steps for others to reproduce the error
Just add text and press tab.

**System Information** Operating system: macOS Graphics card: Intel **Blender Version** Broken: 2.80 0f99845d2f153cf5fce42264bd9217e9f2eb2759 2018-1-10 **Short description of error** A warning pops up on the bottom bar saying `Tool 'Select Box' not found for space 'VIEW3D'` when entering text edit mode. There are no tools at all on the left when entering edit mode, not sure if that's expected or not. **Exact steps for others to reproduce the error** Just add text and press tab.

Added subscriber: @henryschreiner

Added subscriber: @henryschreiner
Campbell Barton was assigned by William Reynish 2019-01-10 16:59:41 +01:00

This issue was referenced by 9c7adcfd8b

This issue was referenced by 9c7adcfd8b58b01dba6dd3abd871fc82c71b5ad7

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#60388
No description provided.