Fix T60388: Warning entering text edit mode